# lib/db/src/schema/index.ts
@@ -1,2 +1,4 @@
 export * from "./users";
 export * from "./emergencies";
+export * from "./profiles";
+export * from "./contacts";
